Feat: Added click multiplier, new GPUs and fixed button UI

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h2 { border-bottom: 1px solid #333; padding-bottom: 10px }
     background: linear-gradient(45deg, #FFD700, #FF8C00);
     border: 2px solid #fff;
     border-radius: 12px;
-    padding: 12px 20px;
+    padding: 12px 5px;
     color: #000;
     font-weight: bold;
     cursor: pointer;
@@ -178,4 +178,70 @@ h2 { border-bottom: 1px solid #333; padding-bottom: 10px }
     border-color: #555;
     cursor: default;
     transform: none;
+}
+
+/* --- СИСТЕМА СОБЫТИЙ (НОВОСТИ) */
+
+#news-banner {
+    position: absolute;
+    top: 20px;
+    left: 50%; /* Центрируем */
+    transform: translatex(-50%); /* Поправка центровки */
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    z-index: 100;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+
+    /* Анимация появления */
+    transition: top 0.5s ease-in-out, opacity 0.5s;
+}
+
+/* Когда новость скрыта (улетает вверх) */
+
+.news-hidden {
+    top: -100px !important; /* Прячем за экран */
+    opacity: 0;
+}
+
+/* Стиль для хорошей новости */
+
+.news-good {
+    background: linear-gradient(90deg, #1d976c, #93f9b9);
+    border: 2px solid #fff;
+}
+
+/* Стиль для плохой новости */
+
+.news-bad {
+    background: linear-gradient(90deg, #eb3349, #f45c43);
+    border: 2px solid #fff;
+}
+
+/* --- Скроллбар для магазина */
+
+/* 1. Настраиваем ширину полосы */
+.shop-section::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* 2. Настраиваем "рельсу" (фон, по которому ездит ползунок) */
+.shop-section::-webkit-scrollbar-track {
+    background: #111;
+    border-radius: 4px;
+}
+
+/* 3. Настраиваем сам "ползунок" */
+.shop-section::-webkit-scrollbar-thumb {
+    background: #444;
+    broder-radius: 4px;
+    border: 2px solid #111;
+}
+
+/* 4. Эффект при наведении мышкой на ползунок */
+.shop-section::-webkit-scrollbar-thumb:hover {
+    background: #4caf50;
+    cursor: pointer;
 }
